--- a/src/frontend/HomeCloud.Maps.Client/Pages/Virus.razor
+++ b/src/frontend/HomeCloud.Maps.Client/Pages/Virus.razor
@@ -6,7 +6,7 @@
 
 @attribute [Authorize]
 
-@inject IHttpService httpService
+@inject IWebAPIClient Client
 @inject IJSRuntime jsRuntime
 
 <h2>Virus</h2>
@@ -40,8 +40,7 @@
             Attribution = "&copy; <a href=\"https://www.openstreetmap.org/copyright\">OpenStreetMap</a> contributors",
         });
 
-        var result = await httpService.GetAsync<List<RouteDto>>($"api/Routes");
-        var routes = result.Response;
+        var routes = await Client.SendAsync(x => x.RoutesAsync());
 
         var drawer = new RouteDrawer();
 
